2009-10-22  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyze.cc (RemoveIgProfFilter): Revert 
	  to previous behavior i.e. just remove the IgProf/Hook part.
	  Introduced behavior could have resulted in massive parts of
	  genuine profile information dropped.

	* test/test_forking.cc: silence a gcc 4.3.2 warning complaining
	  about usefulness of calculating exp(1) and not doing
	  anything with the result.

2009-10-19  Giulio Eulisse <giulio.eulisse@cern.ch>

	* scripts/igprof-symbol-sizes: new script to extract symbol
	  size information for a given set of libraries which 
	  can then be processed using igprof-analyse.

2009-10-12  Lassi Tuura  <lat@iki.fi>
	
	* bin/IgProfAnalyze.cc (RemoveIgProfFilter): Remove the entire
	tree under IgProf/IgHook, not just the IgProf/Hook part.

	* src/IgProfSymCache.cc: Disable rounding to symbols.  When
	dynamic symbol information is inaccurate, e.g. for symbols with
	only local visibility, rounding to symbols on output reduce
	profile data accuracy: multiple unrelated symbols are collapsed
	together and igprof-analyse will no longer be able to separate
	them from each other.

2009-10-12  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* bin/IgProfAnalyse.cc: actually print out the correct number
	  for "Self" percentage. Clean up the way we print percentages.

	* bin/IgProfAnalyse.h: fixes a problem with the diff output when
	  -r option was not specified. The actual problem was that only
	  the counts for the baseline were added.

2009-10-12  Lassi A. Tuura  <lat@iki.fi>

	* src/IgProfTrace.cc: Silence some GCC 4.x printf() warnings.

	* src/IgProf.cc: Prevent profiling in the auxiliary thread which
	is used to dump profiles; it tends to go into busy loop on RHEL5.
	* src/IgProfPerf.cc: Do not prevent blocking profiling signals in
	threads which do not have a profiling timer running. Report the
	signal handler and profiling interval in the debug output.

2009-10-11  Lassi A. Tuura  <lat@iki.fi>
